# dasshh

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/data/: index.html
api/events/: index.html
api/runtime/: index.html
api/tools/: index.html
api/ui/: index.html
contributing/contributing/: index.html
dasshh/: __main__.py
dasshh/apps/: __init__.py  general.py
dasshh/apps/os/: __init__.py  file_operations.py  network_tools.py  process_management.py  system_info.py
dasshh/core/: dto.py  logging.py  registry.py  runtime.py
dasshh/core/tools/: base.py  decorator.py  function_tool.py
dasshh/data/: client.py  models.py  session.py
dasshh/ui/: app.py  events.py  theme.py  types.py  utils.py
dasshh/ui/components/: navbar.py
dasshh/ui/screens/: help.py  (+1 more)
docs/: README.md  index.md
docs/api/: data.md  events.md  runtime.md  tools.md  ui.md
docs/contributing/: contributing.md
docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/guide/: abilities.md  basics.md  configuration.md  keybindings.md  own-tools.md
docs/stylesheets/: extra.css
getting-started/installation/: index.html
getting-started/introduction/: index.html
getting-started/quick-start/: index.html
guide/abilities/: index.html
guide/basics/: index.html
guide/configuration/: index.html
guide/keybindings/: index.html
guide/own-tools/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_main.py
(+33 files in other folders)
